--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&family=Source+Code+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 
     <title>Домашняя страница</title>
@@ -13,7 +17,134 @@
 
 <body>
 
-    <script src="js/script.js"></script>
+    <div class="wrapper">
+
+        <header class="header">
+            <span class="header__logo">Yakser</span>
+            <div class="header__menu-container container">
+
+                <span class="header__menu-btn btn" id="js-menu-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><rect y="44.38" width="100" height="11.24" rx="5.62"/><rect y="16.38" width="100" height="11.24" rx="5.62"/><rect y="72.38" width="100" height="11.24" rx="5.62"/></svg>
+                </span>
+            </div>
+        </header>
+
+
+
+        <main class="main">
+
+            <section class="section info">
+
+                <h3 class="mono title">Hello, World!</h3>
+
+                <header class="info__header">
+                    <div class="info__user-image">
+                        <img src="./img/me.jpg" alt="User Image">
+                    </div>
+                    <h4 class="info__username">Яксанов Сергей Сергеевич</h4>
+                </header>
+
+                <div class="info__main">
+                    <div class="info__block">
+                        <span class="info__block-title">
+                            Город
+                        </span>
+                        <span class="info__block-text">Саратов</span>
+                    </div>
+                    <div class="info__block">
+                        <span class="info__block-title">
+                            Возраст
+                        </span>
+                        <span class="info__block-text">17 лет</span>
+                    </div>
+                    <div class="info__block">
+                        <span class="info__block-title">
+                            Школа
+                        </span>
+                        <span class="info__block-text">МАОУ "Физико-технический лицей №1"</span>
+                    </div>
+                    <div class="info__block">
+                        <span class="info__block-title">
+                            GitHub
+                        </span>
+                        <span class="info__block-text">
+                            <a href="https://github.com/Yakser" target="_blank">&lt; Yakser /&gt;</a>
+                        </span>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section about">
+                <header class="section__header about__header">
+                    <h3 class="mono title">Обо мне</h3>
+
+                </header>
+                <div class="section__main about__main">
+                    <p class="text">
+                        Всем привет! Меня зовут Серёжа. Я увлекаюсь веб-разработкой, закончил <a target="_blank" href="https://lyceum.yandex.ru/certificate/check/?certNumber=210234506&lastName=%D0%AF%D0%BA%D1%81%D0%B0%D0%BD%D0%BE%D0%B2">Яндекс.Лицей</a>,
+                        который и поспособствовал моему увлечению. Сейчас я изучаю React и Typescript. Еще я с самых ранних лет занимаюсь спортивным ориентированием и являюсь кандидатом в мастера спорта 😋
+                    </p>
+                </div>
+            </section>
+
+            <section class="section works">
+                <header class="section__header works__header">
+                    <h3 class="mono title">Проекты</h3>
+                </header>
+
+                
+
+
+
+            </section>
+
+            <footer>
+                <div class="socials">
+                    <div class="socials__block">
+                        <svg width="32px" height="32px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16 0.396c-8.839 0-16 7.167-16 16 0 7.073 4.584 13.068 10.937 15.183 0.803 0.151 1.093-0.344 1.093-0.772 0-0.38-0.009-1.385-0.015-2.719-4.453 0.964-5.391-2.151-5.391-2.151-0.729-1.844-1.781-2.339-1.781-2.339-1.448-0.989 0.115-0.968 0.115-0.968 1.604 0.109 2.448 1.645 2.448 1.645 1.427 2.448 3.744 1.74 4.661 1.328 0.14-1.031 0.557-1.74 1.011-2.135-3.552-0.401-7.287-1.776-7.287-7.907 0-1.751 0.62-3.177 1.645-4.297-0.177-0.401-0.719-2.031 0.141-4.235 0 0 1.339-0.427 4.4 1.641 1.281-0.355 2.641-0.532 4-0.541 1.36 0.009 2.719 0.187 4 0.541 3.043-2.068 4.381-1.641 4.381-1.641 0.859 2.204 0.317 3.833 0.161 4.235 1.015 1.12 1.635 2.547 1.635 4.297 0 6.145-3.74 7.5-7.296 7.891 0.556 0.479 1.077 1.464 1.077 2.959 0 2.14-0.020 3.864-0.020 4.385 0 0.416 0.28 0.916 1.104 0.755 6.4-2.093 10.979-8.093 10.979-15.156 0-8.833-7.161-16-16-16z"/>
+                        </svg>
+
+                    </div>
+                </div>
+            </footer>
+
+        </main>
+
+
+    </div>
+
+    <div class="menu container" id="js-menu">
+        <span class="menu__close-btn btn" id="js-close-menu-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><rect x="-17.88" y="44.38" width="135.76" height="11.24" rx="5.62" transform="translate(-20.71 50) rotate(-45)"/><rect x="44.38" y="-17.88" width="11.24" height="135.76" rx="5.62" transform="translate(-20.71 50) rotate(-45)"/></svg>
+        </span>
+        <ul class="menu__list">
+            <li>
+                <span>Главная</span>
+            </li>
+            <li>
+                <span>Обо мне</span>
+            </li>
+            <li>
+                <div class="theme-mode-btn-container">
+                    <span class="theme-mode-btn btn" id="js-theme-mode-btn">
+                    <span id="js-dark-mode-ico" class="theme-mode-ico">
+                        <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M49.94,0a3.58,3.58,0,0,0-3.51,3.62v10.7a3.57,3.57,0,0,0,7.14.1V3.62A3.58,3.58,0,0,0,50.05,0ZM17.16,13.6a3.58,3.58,0,0,0-3.56,3.58,3.64,3.64,0,0,0,1.08,2.55l7.57,7.57a3.57,3.57,0,0,0,5.15-4.95l-.1-.1-7.57-7.57A3.58,3.58,0,0,0,17.16,13.6Zm65.56,0a3.62,3.62,0,0,0-2.45,1.08L72.7,22.25a3.57,3.57,0,1,0,5,5.15.94.94,0,0,1,.1-.1l7.57-7.57a3.57,3.57,0,0,0-2.6-6.13ZM50,25A25,25,0,1,0,75,50,25,25,0,0,0,50,25ZM3.62,46.43a3.57,3.57,0,0,0-.1,7.14h10.8a3.57,3.57,0,0,0,.1-7.14H3.62Zm82.06,0a3.57,3.57,0,1,0-.1,7.14h10.8a3.57,3.57,0,0,0,.1-7.14H85.68Zm-61,25.19a3.62,3.62,0,0,0-2.45,1.08l-7.57,7.57a3.57,3.57,0,1,0,4.95,5.15.94.94,0,0,1,.1-.1l7.57-7.57a3.57,3.57,0,0,0-2.6-6.13Zm50.49,0a3.57,3.57,0,0,0-2.49,6.13l7.57,7.57a3.57,3.57,0,1,0,5.15-4.95l-.1-.1L77.75,72.7A3.58,3.58,0,0,0,75.19,71.62ZM49.94,82.06a3.58,3.58,0,0,0-3.51,3.62v10.7a3.57,3.57,0,0,0,7.14.1V85.68a3.58,3.58,0,0,0-3.52-3.62Z"/></svg>
+                    </span>
+                    <span class="theme-mode-ico" id="js-light-mode-ico">
+                       <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M97.39,60.84A49.91,49.91,0,0,1,26.87,3.16,49.91,49.91,0,1,0,99.05,60C98.5,60.25,98,60.55,97.39,60.84Z"/></svg>
+                    </span>
+                    </span>
+                    <span class="hint">&dash; сменить тему</span>
+
+                </div>
+
+            </li>
+        </ul>
+    </div>
+
+    <script src="js/themeChanger.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
