Добавил констраст фонам меню, исправил опечатки

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             <img src="./img/reactTodo.jpg" alt="React todo web app">
                         </div>
                         <p class="project__description text">
-                            React TODO - простое приложение для составление списка дел на день - управляйте целями и задачами, расставляйте приоритеты и выполняйте все, что спланировали. Это SPA приложение, написанное с использованием библиотеки ReactJS.
+                            React TODO - простое приложение для составления списка дел на день - управляйте целями и задачами, расставляйте приоритеты и выполняйте все, что спланировали. Это SPA приложение, написанное с использованием библиотеки ReactJS.
                         </p>
                         <div class="project__refs">
                             <span>
