--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&family=Source+Code+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="favicon.svg">
 
-    <title>Домашняя страница</title>
+    <title>Домашняя страница - Сергей Яксанов</title>
+
 </head>
 
 <body>
@@ -320,7 +322,7 @@
 
     </div>
 
-    <div class="menu container" id="js-menu">
+    <nav class="menu container" id="js-menu">
         <span class="menu__close-btn btn" id="js-close-menu-btn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><rect x="-17.88" y="44.38" width="135.76" height="11.24" rx="5.62" transform="translate(-20.71 50) rotate(-45)"/><rect x="44.38" y="-17.88" width="11.24" height="135.76" rx="5.62" transform="translate(-20.71 50) rotate(-45)"/></svg>
         </span>
@@ -353,7 +355,7 @@
 
             </li>
         </ul>
-    </div>
+    </nav>
 
     <script src="js/themeChanger.js"></script>
     <script src="js/menu.js"></script>
