--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
                 </header>
                 <div class="section__main about__main">
                     <p class="text">
-                        Всем привет! Меня зовут Серёжа. Я увлекаюсь веб-разработкой, закончил <a target="_blank" href="https://lyceum.yandex.ru/certificate/check/?certNumber=210234506&lastName=%D0%AF%D0%BA%D1%81%D0%B0%D0%BD%D0%BE%D0%B2">Яндекс.Лицей</a>,
-                        который и поспособствовал моему увлечению. Сейчас я изучаю React и Typescript. Еще я с самых ранних лет занимаюсь спортивным ориентированием и являюсь кандидатом в мастера спорта 😋
+                        Привет! Меня зовут Серёжа. Я из города Саратов, мне 17 лет, учусь в Физико-техническом лицее № 1. С самого раннего детства я занимаюсь спортивным ориентированием - это бег с картой в лесу по заданному маршруту. Еще с детства я хотел стать программистом,
+                        делать компьютерные игры. Но в школе я познакомился с <a target="_blank" href="https://lyceum.yandex.ru/certificate/check/?certNumber=210234506&lastName=%D0%AF%D0%BA%D1%81%D0%B0%D0%BD%D0%BE%D0%B2">Яндекс.Лицеем</a>,
+                        который открыл для меня мир веб-разработки. После окончания лицея моё желание изучать веб-технологии только усилилось. Я познакомился с React, FastAPI, Typescript, SCSS, и другими крутыми штуками (даже успел поработать на фрилансе
+                        и верстальщиком в маленькой веб-студии). Почему же я решил участвовать в проекте? Мне просто нравится всё, что связано с web'ом, нравится изучать новые технологии и практиковаться в разработке 😋
                     </p>
                 </div>
             </section>
@@ -372,7 +374,7 @@
                         <span id="js-dark-mode-ico" class="theme-mode-ico">
                             <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M49.94,0a3.58,3.58,0,0,0-3.51,3.62v10.7a3.57,3.57,0,0,0,7.14.1V3.62A3.58,3.58,0,0,0,50.05,0ZM17.16,13.6a3.58,3.58,0,0,0-3.56,3.58,3.64,3.64,0,0,0,1.08,2.55l7.57,7.57a3.57,3.57,0,0,0,5.15-4.95l-.1-.1-7.57-7.57A3.58,3.58,0,0,0,17.16,13.6Zm65.56,0a3.62,3.62,0,0,0-2.45,1.08L72.7,22.25a3.57,3.57,0,1,0,5,5.15.94.94,0,0,1,.1-.1l7.57-7.57a3.57,3.57,0,0,0-2.6-6.13ZM50,25A25,25,0,1,0,75,50,25,25,0,0,0,50,25ZM3.62,46.43a3.57,3.57,0,0,0-.1,7.14h10.8a3.57,3.57,0,0,0,.1-7.14H3.62Zm82.06,0a3.57,3.57,0,1,0-.1,7.14h10.8a3.57,3.57,0,0,0,.1-7.14H85.68Zm-61,25.19a3.62,3.62,0,0,0-2.45,1.08l-7.57,7.57a3.57,3.57,0,1,0,4.95,5.15.94.94,0,0,1,.1-.1l7.57-7.57a3.57,3.57,0,0,0-2.6-6.13Zm50.49,0a3.57,3.57,0,0,0-2.49,6.13l7.57,7.57a3.57,3.57,0,1,0,5.15-4.95l-.1-.1L77.75,72.7A3.58,3.58,0,0,0,75.19,71.62ZM49.94,82.06a3.58,3.58,0,0,0-3.51,3.62v10.7a3.57,3.57,0,0,0,7.14.1V85.68a3.58,3.58,0,0,0-3.52-3.62Z"/></svg>
                         </span>
-                        <span class="theme-mode-ico" id="js-light-mode-ico">
+                    <span class="theme-mode-ico" id="js-light-mode-ico">
                             <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M97.39,60.84A49.91,49.91,0,0,1,26.87,3.16,49.91,49.91,0,1,0,99.05,60C98.5,60.25,98,60.55,97.39,60.84Z"/></svg>
                         </span>
                     </span>
@@ -386,4 +388,5 @@
     <script src="js/menu.js"></script>
 
 </body>
+
 </html>
